Mon Sep  6 12:35:27 2004  Tim Janik  <timj@gtk.org>

	* sfiprimitives.c (sfi_ring_reorder): fixed pointer comparision
	function that caused an unsorted intermediate structure.

	* testsfi.c (test_sfi_ring): added one more sfi_ring_reorder() test.

Sat Sep  4 04:59:57 2004  Tim Janik  <timj@gtk.org>

	* sfiparams.h: removed misplaced pspec option comments.

	* sfidl-corecxx.cc:
	* sfidl-corec.cc: pspec constructor fixups.

	* sfi/sfidl-parser.h:
	* sfi/sfidl-parser.cc: implemented ConstIdent, a constant able to hold
	an identifier.

Thu Sep  2 03:29:39 2004  Tim Janik  <timj@gtk.org>

	* glib-extra.c: g_option_find_value(): match +/- option modifiers only
	at option boundaries, allow = after option name for value assignments.

	* sfiparams.h: more preliminary pspec option documentation.

Wed Sep  1 01:45:40 2004  Tim Janik  <timj@gtk.org>

	* sfiprimitives.[hc]:
	sfi_ring_reorder(): changed this into a ring modifying function without
	the need of a custom cmp function.
	properly handle duplicates in the unordered list.
	ring_reorder_lookup(): fixed off-by-one error when adjusting offset,
	got rid of calling compare function by using pointer comparisons.

	* testsfi.c: more sfi_ring_reorder() tests.

Sun Aug 29 04:14:19 2004  Tim Janik  <timj@gtk.org>

	* sficomport.c (sfi_com_port_send_bulk): in case the comport got
	disconnected, don't free values not belonging to the port.

	* sfimemory.c: disabled block-allocator, use malloc/free instead. there's
	no platform currently where we have performance problems with malloc/free.

	* sfiserial.[hc]: added sfi_value_store_stderr() to allow easy debugging
	of marshalled value contents.

Sat Aug 28 22:14:30 2004  Tim Janik  <timj@gtk.org>

	* sfiprimitives.[hc]: const fixes for SfiRing.
	added sfi_ring_reorder() to "unsort" a ring.

	* sfifilecrawler.c: caller fixup.

	* testsfi.c: ring reordering tests.

Sat Aug 28 17:53:30 2004  Tim Janik  <timj@gtk.org>
