@@ -1,3 +1,8 @@
+Wed Sep  8 15:36:41 2004  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.[hc]: added g_intern_printf() to return a static printf-
+	formatted string for which a quark exists.
+
 Mon Sep  6 12:35:27 2004  Tim Janik  <timj@gtk.org>
 
 	* sfiprimitives.c (sfi_ring_reorder): fixed pointer comparision
